--- a/views/searchpage.pug
+++ b/views/searchpage.pug
@@ -16,43 +16,41 @@ body
         include ./infoBox.pug
     
     main
-        h1 #{title}
-        a(href='/') main
-        span &nbsp&nbsp
-        if(loginstate=='okay')
-            a(href='/board/write') 글쓰기
-        table(border='1')
-            tbody
-                tr 
-                    td 번호
-                    td 작성자
-                    td 제목
-                    td 조회수
-                    td 수정일
-                    td 등록일
-                -for(var i = 0; i<rows.length; i++)
-                    -var data = rows[i]
-                        tr
-                            td #{data.idx}
-                            td #{data.userid}
-                            td
-                                a(href='/board/read/' + data.idx) #{data.title}
-                            td #{data.hit}
-                            td #{data.modidate}
-                            td #{data.regdate}
+        h1.maintitle #{title}
 
-            
-                tr
-                    td(colspan='6')
-                        -for (var j = 0; j < rows.length / page_num; j++) 
-                            a(href='/board/page/' + (j + 1)) #{j+1}
-                            span &nbsp&nbsp
+        div.tablecontainer
+            table(border='1')
+                tbody
+                    tr.boardtop
+                        td.boardnum 번호
+                        td.boardid 작성자
+                        td 제목
+                        td.boardhit 조회수
+                        td.boarddate 수정일
+                        td.boarddate 등록일
+                    -for(var i = 0; i<rows.length; i++)
+                        -var data = rows[i]
+                            tr.boardlist
+                                td.boardnum #{data.idx}
+                                td.boardid #{data.userid}
+                                td
+                                    a(href='/board/read/' + data.idx) #{data.title}
+                                td.boardhit #{data.hit}
+                                td.boarddate #{data.modidate}
+                                td.boarddate #{data.regdate}
 
-                tr
-                    td(colspan='6')
-                        form(action="/board/search/" method = "post")
-                            select(name="category")
-                                option(value="userid") 글쓴이
-                                option(value="title") 제목
-                            input(name ="search" type="text" required='')
-                            input(type="submit" value="검색")
+                
+                    tr
+                        td.pagenum(colspan='6')
+                            -for (var j = 0; j < rows.length / page_num; j++) 
+                                a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
+                                span &nbsp&nbsp
+
+                    tr
+                        td(colspan='6')
+                            form(action="/board/search/" method = "post")
+                                select(name="category")
+                                    option(value="userid") 글쓴이
+                                    option(value="title") 제목
+                                input.searchinput(name ="search" type="text" required='')
+                                input(type="submit" value="검색")
