--- a/views/boardpage.pug
+++ b/views/boardpage.pug
@@ -18,51 +18,51 @@ body
     main
         h1.maintitle #{title}
 
-        div.boardlink
-            a(href='/') main
-            span &nbsp&nbsp
-            if(loginstate=='okay')
-                a(href='/board/write') 글쓰기
-        br
-        table
-            tbody
-                tr.boardtop
-                    td.boardnum 번호
-                    td.boardid 작성자
-                    td 제목
-                    td.boardhit 조회수
-                    td.boarddate 수정일
-                    td.boarddate 등록일
-                    
-                -for(var i = (page * page_num) - page_num; i<(page * page_num); i++)
-                    
-                    -if(i > length) 
-                        -var data = {}
-                    -else var data = rows[i]
-                        -var commentnum = comment.filter((e)=>e.board_idx==data.idx).length
-                        tr
-                            td.boardnum #{i + 1}
-                            td.boardid #{data.userid}
-                            td
-                                a.boardtitle(href='/board/read/' + data.idx) #{data.title}
-                                    if(commentnum!=0)
-                                        span.commentnum [#{commentnum}]
-                            td.boardhit #{data.hit}
-                            td.boarddate #{data.modidate}
-                            td.boarddate #{data.regdate}
+        div.tablecontainer
+            br
+            table
+                tbody
+                    tr.boardtop
+                        td.boardnum 번호
+                        td.boardid 작성자
+                        td 제목
+                        td.boardhit 조회수
+                        td.boarddate 수정일
+                        td.boarddate 등록일
+                        
+                    -for(var i = (page * page_num) - page_num; i<(page * page_num); i++)
+                        
+                        -if(i > length) 
+                            -var data = {}
+                        -else var data = rows[i]
+                            -var commentnum = comment.filter((e)=>e.board_idx==data.idx).length
+                            tr
+                                td.boardnum #{i + 1}
+                                td.boardid #{data.userid}
+                                td
+                                    a.boardtitle(href='/board/read/' + data.idx) #{data.title}
+                                        if(commentnum!=0)
+                                            span.commentnum [#{commentnum}]
+                                td.boardhit #{data.hit}
+                                td.boarddate #{data.modidate}
+                                td.boarddate #{data.regdate}
 
-            
-                tr
-                    td.pagenum(colspan='6')
-                        -for (var j = 0; j < rows.length / page_num; j++) 
-                            a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
-                            span &nbsp&nbsp
+                
+                    tr
+                        td.pagenum(colspan='6')
+                            -for (var j = 0; j < rows.length / page_num; j++) 
+                                a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
+                                span &nbsp&nbsp
 
-                tr
-                    td.searchform(colspan='6')
-                        form(action="/board/search/" method = "post")
-                            select(name="category")
-                                option(value="userid") 글쓴이
-                                option(value="title") 제목
-                            input.searchinput(name ="search" type="text" required='')
-                            input(type="submit" value="검색")
+                    tr
+                        td.searchform(colspan='6')
+                            form(action="/board/search/" method = "post")
+                                select(name="category")
+                                    option(value="userid") 글쓴이
+                                    option(value="title") 제목
+                                input.searchinput(name ="search" type="text" required='')
+                                input(type="submit" value="검색")
+            div.boardlink
+                if(loginstate=='okay')
+                    a(href='/board/write')
+                        button.writeBtn 글쓰기
