--- a/views/css/header.css
+++ b/views/css/header.css
@@ -117,6 +117,7 @@ main {
 }
 
 .navBarMenuBtn {
+  cursor: pointer;
   /* background-color: var(--navText-color); */
   background-color: rgba(128, 128, 128, 0);
   /* border-radius: 10px; */
@@ -128,6 +129,7 @@ main {
   border: none;
 }
 .navBarSignBtn {
+  cursor: pointer;
   /* background-color: var(--navText-color); */
   background-color: rgba(0, 0, 0, 0);
   /* border-radius: 10px; */
