--- a/views/write.pug
+++ b/views/write.pug
@@ -21,18 +21,18 @@ body
             table(border='1')
                 tbody
                     tr(style)
-                        td 작성자
+                        td.boardleft 작성자
                         td #{id}
                     tr
-                        td 제목
+                        td.boardleft 제목
                         td
-                            input#title(type='text' name='title' required='' style='width:99%')
+                            input.writeContainer#title(type='text' name='title' required='' style='width:99%')
                     tr
-                        td 내용
+                        td.boardleft 내용
                         td
-                            textarea#content(name='content' cols='30' rows='10' required='' style='width:99%; resize:none')
+                            textarea.writeContainer#content(name='content' cols='30' rows='10' required='' style='width:99%; resize:none')
                     tr
                         td(colspan='2')
-                            button(type='submit') 글쓰기
+                            button.writeBtn(type='submit') 글쓰기
 
             
