page번호중앙 높이증가

--- a/views/boardpage.pug
+++ b/views/boardpage.pug
@@ -36,7 +36,7 @@ body
                             -var data = {}
                         -else var data = rows[i]
                             -var commentnum = comment.filter((e)=>e.board_idx==data.idx).length
-                            tr
+                            tr.boardlist
                                 td.boardnum #{i + 1}
                                 td.boardid #{data.userid}
                                 td
@@ -51,7 +51,7 @@ body
                     tr
                         td.pagenum(colspan='6')
                             -for (var j = 0; j < rows.length / page_num; j++) 
-                                a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
+                                a(href='/board/page/' + (j + 1)) #{j+1}
                                 span &nbsp&nbsp
 
                     tr
