--- a/views/searchpage.pug
+++ b/views/searchpage.pug
@@ -43,7 +43,7 @@ body
                     tr
                         td.pagenum(colspan='6')
                             -for (var j = 0; j < rows.length / page_num; j++) 
-                                a(href='/board/page/' + (j + 1)) &nbsp #{j+1}
+                                a(href='/board/page/' + (j + 1)) #{j+1}
                                 span &nbsp&nbsp
 
                     tr
