--- a/views/css/boardtable.css
+++ b/views/css/boardtable.css
@@ -44,6 +44,7 @@ table,th,td {
     border-bottom: 5px solid white;
 }
 .boardleft{
+    width: 20%;
     height: 1.5cm;
     font-size: 20px;
     font-weight: 600;
@@ -93,17 +94,17 @@ table,th,td {
     overflow: hidden;
     resize: none;
     border: hidden;
-    font-size: 15px;
+    font-size: 20px;
 }
 .commentDel{
     float: right;
 }
 .titleCon{
     border: hidden;
-    font-size: 20px;
+    font-size: 30px;
 }
 #content{
-    font-size: 20px;
+    font-size: 30px;
 }
 .listlink{
     float:left;
@@ -133,7 +134,8 @@ table,th,td {
 }
 
 .commentid {
-    width:20%
+    width:20%;
+    font-size: 20px;
 }
 
 .tablecontainer {
