수고하셨습니다^^
test로 돼있는거 수정

--- a/views/css/garen.css
+++ b/views/css/garen.css
@@ -94,7 +94,7 @@ body {
     height: auto;
     padding-right: 1%;
 }
-#test {
+#signer {
     margin-left: 8%;
 
     animation: testAnim 1.5s infinite;
